--- a/conf.config
+++ b/conf.config
@@ -4,25 +4,29 @@ hostname ISP2
 interface GigabitEthernet 0/0
 ip address 2.2.2.1 255.255.255.252
 no shutdown
+interface Serial 0/0/0
+ip address 3.3.3.1 255.255.255.252
+no shutdown
 interface Serial 0/0/1
-ip address 1.1.1.6 255.255.255.252
+ip address 1.1.1.10 255.255.255.252
 no shutdown
 
 ISP1
 hostname ISP1
 interface Serial 0/0/1
-ip address 1.1.1.5 255.255.255.252
+ip address 1.1.1.9 255.255.255.252
 no shutdown
 int Serial 0/0/0
-ip address 1.1.1.1 255.255.255.252
+ip address 1.1.1.1 255.255.255.248
 no shutdown
 
 R0
 hostname R0
 interface Serial 0/0/0
-ip address 10.0.0.1 255.255.255.252
+ip address 10.0.0.1 255.255.255.248
+no shutdown
 interface Serial 0/0/1
-ip address 10.0.0.9 255.255.255.252
+ip address 10.0.0.9 255.255.255.248
 no shutdown
 interface Serial 0/1/0
 ip address 1.1.1.2 255.255.255.252
@@ -35,15 +39,15 @@ R1
 hostname R1
 ipv6 unicast-routing
 interface Serial 0/0/1
-ip address 10.0.0.10 255.255.255.252
+ip address 10.0.0.10 255.255.255.248
 no shutdown
-interface Serial 0/0/1
+interface Serial 0/0/0
 ip address 192.168.11.6 255.255.255.252
 no shutdown
 interface GigabitEthernet 0/0
 no shutdown
 interface GigabitEthernet 0/1
-ip address 192.168.11.15 255.255.255.0
+ip address 192.168.11.14 255.255.255.248
 no shutdown
 interface GigabitEthernet 0/2
 ip address 192.168.11.1 255.255.255.252
@@ -52,51 +56,52 @@ no shutdown
 R2
 hostname R2
 interface Serial 0/0/0
-ip address 10.0.0.2 255.255.255.252
+ip address 10.0.0.2 255.255.255.248
+no shutdown
 interface Serial 0/0/1
 ip address 192.168.11.5 255.255.255.252
 no shutdown
 interface GigabitEthernet 0/1
-ip address 192.168.11.14
+ip address 192.168.11.13 255.255.255.248
 no shutdown
 
 SW0
 hostname SW0
-interface FastEthernet 0/1
-switchport mode acces
+interface range FastEthernet 0/1, GigabitEthernet 0/1-2
+switchport mode access
 interface range FastEthernet 0/2-24
-switchport mode acces
-switchport acces vlan 100
+switchport mode access
+switchport access vlan 100
 shutdown
 
 SW1
 hostname SW1
 interface range FastEthernet 0/3-20, GigabitEthernet 0/2
-switchport mode acces
-switchport acces vlan 100
+switchport mode access
+switchport access vlan 100
 shutdown
 
 SW2
 hostname SW2
 interface range FastEthernet 0/3-18, FastEthernet 0/23-24, GigabitEthernet 0/1-2
-switchport mode acces
-switchport acces vlan 100
+switchport mode access
+switchport access vlan 100
 shutdown
 
 SW3
 hostname SW3
 interface range FastEthernet 0/3-10, FastEthernet 0/13-18, FastEthernet 0/21-22, GigabitEthernet 0/1-2
-switchport mode acces
-switchport acces vlan 100
+switchport mode access
+switchport access vlan 100
 shutdown
 
 SW4
 hostname SW4
 interface range FastEthernet 0/1, GigabitEthernet 0/1
-switchport mode acces
+switchport mode access
 interface range FastEthernet 0/2-24, GigabitEthernet 0/2
-switchport mode acces
-switchport acces vlan 100
+switchport mode access
+switchport access vlan 100
 shutdown
 # VTP, VLAN
 SW1
@@ -112,8 +117,8 @@ name HR
 vlan 40
 name MARKETING
 interface range FastEthernet 0/1-2
-switchport mode acces
-switchport acces vlan 10
+switchport mode access
+switchport access vlan 10
 interface GigabitEthernet 0/1
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40
@@ -124,63 +129,74 @@ vtp mode client
 vtp domain cacti.hu
 vtp password cacti
 interface range FastEthernet 0/1-2
-switchport mode acces
-switchport acces vlan 40
+switchport mode access
+switchport access vlan 40
 
 SW3
 vtp mode client
 vtp domain cacti.hu
 vtp password cacti
 interface range FastEthernet 0/1-2
-switchport mode acces
-switchport acces vlan 20
+switchport mode access
+switchport access vlan 20
 interface range FastEthernet 0/11-12
-switchport mode acces
-switchport acces vlan 30
+switchport mode access
+switchport access vlan 30
 # STP,ETH
 SW1
-spanning-tree mode rapid-pvst
-interface range FastEthernet 0/1-20, GigabitEthernet 0/2
-spanning-tree bpduguard enable
-spanning-tree portfast enable
-interface range FastEthernet 0/1-24, GigabitEthernet 0/2
-spanning-tree guard root
 interface range FastEthernet 0/21-22
-channel-group 1 mdoe active
+channel-group 1 mode active
 interface range FastEthernet 0/23-24
-channel-group 2 mdoe active
-interface range port-channel 1-2
+channel-group 2 mode active
+interface port-channel 1
 switchport mode trunk
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
+interface port-channel 2
+switchport mode trunk
+switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40
+spanning-tree mode rapid-pvst
+spanning-tree vlan 10,20,30,40
+spanning-tree vlan 10,20,30,40 root primary
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
 
 SW2
-spanning-tree mode rapid-pvst
-interface range FastEthernet 0/1-18, FastEthernet 0/23-24, GigabitEthernet 0/1-2
-spanning-tree bpduguard enable
-spanning-tree portfast enable
 interface range FastEthernet 0/19-20
 channel-group 1 mode active
 interface range FastEthernet 0/21-22
 channel-group 2 mode active
-interface range port-channel 1-2
+interface port-channel 1
 switchport mode trunk
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
+interface port-channel 2
+switchport mode trunk
+switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40
+spanning-tree mode rapid-pvst
+spanning-tree vlan 10,20,30,40
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
 
 SW3
-spanning-tree mode rapid-pvst
-interface range FastEthernet 0/1-18, FastEthernet 0/21-22, GigabitEthernet 0/1-2
-spanning-tree bpduguard enable
-spanning-tree portfast enable
 interface range FastEthernet 0/19-20
 channel-group 1 mode active
 interface range FastEthernet 0/23-24
 channel-group 2 mode active
-interface range port-channel 1-2
+interface port-channel 1
 switchport mode trunk
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
+interface port-channel 2
+switchport mode trunk
+switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40
+spanning-tree mode rapid-pvst
+spanning-tree vlan 10,20,30,40
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
 
 R1
 interface GigabitEthernet 0/0.10
@@ -197,17 +213,19 @@ ip address 192.168.1.129 255.255.255.192
 ipv6 address fc30::1/12
 interface GigabitEthernet 0/0.40
 encapsulation dot1Q 40
-ip address 192.168.1.192 255.255.255.192
+ip address 192.168.1.193 255.255.255.192
 ipv6 address fc40::1/12
 # DHCP
 R0
+service dhcp
 ip dhcp excluded-address 192.168.0.2
 ip dhcp pool public_wifi
 network 192.168.0.0 255.255.255.0
 default-router 192.168.0.1
-dns-server 192.168.11.11
+dns-server 10.0.0.10
 
 R1
+service dhcp
 ip dhcp excluded-address 192.168.1.2 192.168.1.3
 ip dhcp excluded-address 192.168.1.66 192.168.1.67
 ip dhcp excluded-address 192.168.1.130 192.168.1.131
@@ -230,60 +248,64 @@ default-router 192.168.1.193
 dns-server 192.168.11.11
 # Telnet/SSH
 SW0
+ip default-gateway 192.168.1.1
 interface vlan 10
-ip address 192.168.1.3
+ip address 192.168.1.3 255.255.255.192
 interface vlan 20
-ip address 192.168.1.67
+ip address 192.168.1.67 255.255.255.192
 interface vlan 30
-ip address 192.168.1.131
+ip address 192.168.1.131 255.255.255.192
 interface vlan 40
-ip address 192.168.1.195
+ip address 192.168.1.195 255.255.255.192
 username user1 password pass1
 line vty 0 15
 login local
 
 SW1
+ip default-gateway 192.168.1.1
 interface vlan 10
-ip address 192.168.1.3
+ip address 192.168.1.3 255.255.255.192
 interface vlan 20
-ip address 192.168.1.67
+ip address 192.168.1.67 255.255.255.192
 interface vlan 30
-ip address 192.168.1.131
+ip address 192.168.1.131 255.255.255.192
 interface vlan 40
-ip address 192.168.1.195
+ip address 192.168.1.195 255.255.255.192
 username user1 password pass1
 line vty 0 15
 login local
 
 SW2
+ip default-gateway 192.168.1.1
 interface vlan 10
-ip address 192.168.1.3
+ip address 192.168.1.3 255.255.255.192
 interface vlan 20
-ip address 192.168.1.67
+ip address 192.168.1.67 255.255.255.192
 interface vlan 30
-ip address 192.168.1.131
+ip address 192.168.1.131 255.255.255.192
 interface vlan 40
-ip address 192.168.1.195
+ip address 192.168.1.195 255.255.255.192
 username user1 password pass1
 line vty 0 15
 login local
 
 SW3
+ip default-gateway 192.168.1.1
 interface vlan 10
-ip address 192.168.1.3
+ip address 192.168.1.3 255.255.255.192
 interface vlan 20
-ip address 192.168.1.67
+ip address 192.168.1.67 255.255.255.192
 interface vlan 30
-ip address 192.168.1.131
+ip address 192.168.1.131 255.255.255.192
 interface vlan 40
-ip address 192.168.1.195
+ip address 192.168.1.195 255.255.255.192
 username user1 password pass1
 line vty 0 15
 login local
 
 SW4
 interface vlan 1
-ip address 192.168.0.2
+ip address 192.168.0.2 255.255.255.0
 no shutdown
 ip domain-name cacti.hu
 crypto key generate rsa
@@ -339,7 +361,7 @@ standby version 2
 standby ip 192.168.11.9
 # Biztonság
 SW0
-interface range FastEthernet 0/1-24, GigabitEthernet 0/1-2
+interface range FastEthernet 0/1-24, GigabitEthernet 0/1
 switchport port-security
 switchport port-security mac-address sticky
 switchport port-security maximum 1
@@ -350,6 +372,11 @@ ip dhcp snooping
 ip dhcp snooping vlan 1,10,20,30,40,99,100
 ip arp inspection vlan 1,10,20,30,40,99,100
 ip arp inspection validate dst-mac ip src-mac
+interface GigabitEthernet 0/2
+switchport port-security
+switchport port-security mac-address sticky
+switchport port-security maximum 2
+switchport port-security violation restrict
 
 SW1
 interface range FastEthernet 0/1-20, GigabitEthernet 0/2
@@ -360,6 +387,7 @@ switchport port-security violation restrict
 enable secret cacti
 service password-encryption
 ip dhcp snooping
+no ip dhcp snooping information option
 ip dhcp snooping vlan 1,10,20,30,40,99,100
 interface GigabitEthernet 0/1
 ip dhcp snooping trust
@@ -374,12 +402,7 @@ switchport port-security maximum 1
 switchport port-security violation restrict
 enable secret cacti
 service password-encryption
-ip dhcp snooping
-ip dhcp snooping vlan 1,10,20,30,40,99,100
-interface range port-channel 1-2
-ip dhcp snooping trust
-ip arp inspection vlan 1,10,20,30,40,99,100
-ip arp inspection validate dst-mac ip src-mac
+#!port channel dhcp snooping trust!
 
 SW3
 interface range FastEthernet 0/1-18, FastEthernet 0/21-22, GigabitEthernet 0/1-2
@@ -389,12 +412,6 @@ switchport port-security maximum 1
 switchport port-security violation restrict
 enable secret cacti
 service password-encryption
-ip dhcp snooping
-ip dhcp snooping vlan 1,10,20,30,40,99,100
-interface range port-channel 1-2
-ip dhcp snooping trust
-ip arp inspection vlan 1,10,20,30,40,99,100
-ip arp inspection validate dst-mac ip src-mac
 
 SW4
 interface range FastEthernet 0/1-24, GigabitEthernet 0/1-2
@@ -405,6 +422,7 @@ switchport port-security violation restrict
 enable secret cacti
 service password-encryption
 ip dhcp snooping
+no ip dhcp snooping information option
 ip dhcp snooping vlan 1,10,20,30,40,99,100
 interface GigabitEthernet 0/1
 ip dhcp snooping trust
@@ -426,56 +444,62 @@ service password-encryption
 R0
 ip route 0.0.0.0 0.0.0.0 Serial 0/1/0
 router ospf 1
+passive-interface Serial 0/0/0
+passive-interface Serial 0/0/1
+passive-interface Serial 0/1/0
+passive-interface GigabitEthernet 0/0
 network 10.0.0.0 0.0.0.15 a 0
 network 192.168.2.0 0.0.0.3 a 0
-area 0 authentication message-digest
-interface range Serial 0/0/0-1
-ip ospf message-digest-key 1 md6 cacti 
 
 R1
 ip route 0.0.0.0 0.0.0.0 Serial 0/0/1
 router ospf 1
-network 10.0.0.8 0.0.0.7 a 0
 network 192.168.11.0 0.0.0.15 a 0
 network 192.168.1.0 0.0.0.255 a 0
 network 192.168.3.0 0.0.0.3 a 0
-passive-interface default
-no passive-interface Serial 0/0/0
-area 0 authentication message-digest
+passive-interface Serial 0/0/1
+passive-interface GigabitEthernet 0/0
+passive-interface GigabitEthernet 0/1
+passive-interface GigabitEthernet 0/2
 interface Serial 0/0/0
-ip ospf message-digest-key 1 md6 cacti 
+ip ospf authentication message-digest
+ip ospf message-digest-key 1 md5 cacti
 
 
 R2
 ip route 0.0.0.0 0.0.0.0 Serial 0/0/0
 router ospf 1
-network 10.0.0.0 0.0.0.7 a 0
 network 192.168.11.8 0.0.0.7 a 0
 network 192.168.11.4 0.0.0.3 a 0
 passive-interface default
 no passive-interface Serial 0/0/1
-area 0 authentication message-digest
 interface Serial 0/0/1
-ip ospf message-digest-key 1 md6 cacti
+ip ospf authentication message-digest
+ip ospf message-digest-key 1 md5 cacti
 
 ISP1
 router ospf 1
 network 1.1.1.0 0.0.0.7 a 0
+network 1.1.1.8 0.0.0.3 a 0
 passive-interface Serial 0/0/0
 
 ISP2
 router ospf 1
-network 1.1.1.4 0.0.0.3 a 0
+network 1.1.1.8 0.0.0.3 a 0
 network 2.2.2.0 0.0.0.3 a 0
 network 3.3.3.0 0.0.0.3 a 0
 passive-interface Serial 0/0/0
 # NAT, Portátirányítás
 R0
-interface range Serial 0/0/0-1, GigabitEthernet 0/0
+interface Serial 0/0/0
+ip nat inside
+interface Serial 0/0/1
+ip nat inside
+interface GigabitEthernet 0/0
 ip nat inside
 interface Serial 0/1/0
 ip nat outside
-ip acces-list standard NAT_ACL
+ip access-list standard NAT_ACL
 permit any
 ip nat pool NAT_PL 1.1.1.2 1.1.1.6 netmask 255.255.255.248
 ip nat inside source list NAT_ACL pool NAT_PL overload
@@ -483,35 +507,37 @@ ip nat inside source static tcp 10.0.0.10 80 1.1.1.2 80
 ip nat inside source static tcp 10.0.0.10 443 1.1.1.2 443
 
 R1
-interface range GigabitEthernet 0/0-2, Serial 0/0/0
+interface range GigabitEthernet 0/0-2
+ip nat inside
+interface Serial 0/0/0
 ip nat inside
 interface Serial 0/0/1
 ip nat outside
-ip acces-list standard NAT_ACL
+ip access-list standard NAT_ACL
 permit any
 ip nat pool NAT_PL 10.0.0.10 10.0.0.14 netmask 255.255.255.248
 ip nat inside source list NAT_ACL pool NAT_PL overload
 ip nat inside source static tcp 192.168.11.11 80 10.0.0.10 80
 ip nat inside source static tcp 192.168.11.11 443 10.0.0.10 443
-ip nat inside source static tcp 192.168.11.11 53 10.0.0.2 53
-
+ip nat inside source static tcp 192.168.11.11 53 10.0.0.10 53
+ip nat inside source static udp 192.168.11.11 53 10.0.0.10 53
 
 R2
-interface range GigabitEthernet 0/1, Serial 0/0/1
+interface GigabitEthernet 0/1
+ip nat inside
+interface Serial 0/0/1
 ip nat inside
 interface Serial 0/0/0
 ip nat outside
-ip acces-list standard NAT_ACL
+ip access-list standard NAT_ACL
 permit any
 ip nat pool NAT_PL 10.0.0.2 10.0.0.6 netmask 255.255.255.248
 ip nat inside source list NAT_ACL pool NAT_PL overload
-ip nat inside source static tcp 192.168.11.11 80 10.0.0.2 80
-ip nat inside source static tcp 192.168.11.11 443 10.0.0.2 443
-ip nat inside source static tcp 192.168.11.11 53 10.0.0.2 53
+
 
 # WiFi
 IP, Gateway, DNS
-public_wifi - (guest acces)
+public_wifi - (guest access)
 192.168.0.0/24
 privat
 192.168.10.0/24
@@ -532,11 +558,6 @@ ip address 192.168.2.1 255.255.255.252
 tunnel source Serial 0/1/0
 tunnel destination 3.3.3.2
 
-ISP2
-interface Serial 0/0/0
-ip address 3.3.3.1 255.255.255.252
-no shutdown
-
 RR
 hostname RR
 interface Serial 0/0/0
@@ -551,12 +572,10 @@ interface tunnel 0
 ip address 192.168.2.2 255.255.255.252
 tunnel source Serial 0/0/0
 tunnel destination 1.1.1.2
+ip route 0.0.0.0 0.0.0.0 Serial 0/0/0
 router ospf 1
 network 192.168.2.0 0.0.0.3 a 0
 network 172.16.0.0 0.0.0.3 a 0
-ip acces-list standard NAT_ACL
-permit any
-ip nat inside source list NAT_ACL interface Serial 0/0/0 overload
 
 R1
 interface tunnel 1
@@ -575,7 +594,7 @@ ip nat outside
 interface GigabitEthernet 0/0
 ip address 172.16.1.1 255.255.255.0
 no shutdown
-ip ant inside
+ip nat inside
 interface tunnel 1
 ip address 192.168.3.2 255.255.255.252
 tunnel source Serial 0/0/0
@@ -584,7 +603,9 @@ ip route 0.0.0.0 0.0.0.0 Serial 0/0/0
 router ospf 1
 network 172.16.1.0 0.0.0.255 a 0
 network 192.168.3.0 0.0.0.3 a 0
-ip acces-list standard NAT_ACL
+
+RR RP
+ip access-list standard NAT_ACL
 permit any
 ip nat inside source list NAT_ACL interface Serial 0/0/0 overload
 
