--- a/conf.config
+++ b/conf.config
@@ -37,7 +37,6 @@ no shutdown
 
 R1
 hostname R1
-ipv6 unicast-routing
 interface Serial 0/0/1
 ip address 10.0.0.10 255.255.255.248
 no shutdown
@@ -69,8 +68,10 @@ SW0
 hostname SW0
 interface range FastEthernet 0/1, GigabitEthernet 0/1-2
 switchport mode access
+switchport nonegotiate
 interface range FastEthernet 0/2-24
 switchport mode access
+switchport nonegotiate
 switchport access vlan 100
 shutdown
 
@@ -78,6 +79,7 @@ SW1
 hostname SW1
 interface range FastEthernet 0/3-20, GigabitEthernet 0/2
 switchport mode access
+switchport nonegotiate
 switchport access vlan 100
 shutdown
 
@@ -85,6 +87,7 @@ SW2
 hostname SW2
 interface range FastEthernet 0/3-18, FastEthernet 0/23-24, GigabitEthernet 0/1-2
 switchport mode access
+switchport nonegotiate
 switchport access vlan 100
 shutdown
 
@@ -92,6 +95,7 @@ SW3
 hostname SW3
 interface range FastEthernet 0/3-10, FastEthernet 0/13-18, FastEthernet 0/21-22, GigabitEthernet 0/1-2
 switchport mode access
+switchport nonegotiate
 switchport access vlan 100
 shutdown
 
@@ -99,13 +103,16 @@ SW4
 hostname SW4
 interface range FastEthernet 0/1, GigabitEthernet 0/1
 switchport mode access
+switchport nonegotiate
 interface range FastEthernet 0/2-24, GigabitEthernet 0/2
 switchport mode access
+switchport nonegotiate
 switchport access vlan 100
 shutdown
 # VTP, VLAN
 SW1
 vtp mode server
+vtp version 2
 vtp domain cacti.hu
 vtp password cacti
 vlan 10
@@ -118,9 +125,11 @@ vlan 40
 name MARKETING
 interface range FastEthernet 0/1-2
 switchport mode access
+switchport nonegotiate
 switchport access vlan 10
 interface GigabitEthernet 0/1
 switchport mode trunk
+switchport nonegotiate
 switchport trunk allowed vlan 10,20,30,40
 switchport trunk native vlan 99
 
@@ -130,6 +139,7 @@ vtp domain cacti.hu
 vtp password cacti
 interface range FastEthernet 0/1-2
 switchport mode access
+switchport nonegotiate
 switchport access vlan 40
 
 SW3
@@ -138,10 +148,26 @@ vtp domain cacti.hu
 vtp password cacti
 interface range FastEthernet 0/1-2
 switchport mode access
+switchport nonegotiate
 switchport access vlan 20
 interface range FastEthernet 0/11-12
 switchport mode access
+switchport nonegotiate
 switchport access vlan 30
+
+R1
+interface GigabitEthernet 0/0.10
+encapsulation dot1Q 10
+ip address 192.168.1.1 255.255.255.192
+interface GigabitEthernet 0/0.20
+encapsulation dot1Q 20
+ip address 192.168.1.65 255.255.255.192
+interface GigabitEthernet 0/0.30
+encapsulation dot1Q 30
+ip address 192.168.1.129 255.255.255.192
+interface GigabitEthernet 0/0.40
+encapsulation dot1Q 40
+ip address 192.168.1.193 255.255.255.192
 # STP,ETH
 SW1
 interface range FastEthernet 0/21-22
@@ -149,11 +175,15 @@ channel-group 1 mode active
 interface range FastEthernet 0/23-24
 channel-group 2 mode active
 interface port-channel 1
+no shutdown
 switchport mode trunk
+switchport nonegotiate
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 interface port-channel 2
+no shutdown
 switchport mode trunk
+switchport nonegotiate
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 spanning-tree mode rapid-pvst
@@ -168,11 +198,15 @@ channel-group 1 mode active
 interface range FastEthernet 0/21-22
 channel-group 2 mode active
 interface port-channel 1
+no shutdown
 switchport mode trunk
+switchport nonegotiate
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 interface port-channel 2
+no shutdown
 switchport mode trunk
+switchport nonegotiate
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 spanning-tree mode rapid-pvst
@@ -186,35 +220,21 @@ channel-group 1 mode active
 interface range FastEthernet 0/23-24
 channel-group 2 mode active
 interface port-channel 1
+no shutdown
 switchport mode trunk
+switchport nonegotiate
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 interface port-channel 2
+no shutdown
 switchport mode trunk
+switchport nonegotiate
 switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 spanning-tree mode rapid-pvst
 spanning-tree vlan 10,20,30,40
 spanning-tree portfast default
 spanning-tree portfast bpduguard default
-
-R1
-interface GigabitEthernet 0/0.10
-encapsulation dot1Q 10
-ip address 192.168.1.1 255.255.255.192
-ipv6 address fc10::1/12
-interface GigabitEthernet 0/0.20
-encapsulation dot1Q 20
-ip address 192.168.1.65 255.255.255.192
-ipv6 address fc20::1/12
-interface GigabitEthernet 0/0.30
-encapsulation dot1Q 30
-ip address 192.168.1.129 255.255.255.192
-ipv6 address fc30::1/12
-interface GigabitEthernet 0/0.40
-encapsulation dot1Q 40
-ip address 192.168.1.193 255.255.255.192
-ipv6 address fc40::1/12
 # DHCP
 R0
 service dhcp
@@ -226,10 +246,10 @@ dns-server 10.0.0.10
 
 R1
 service dhcp
-ip dhcp excluded-address 192.168.1.2 192.168.1.3
-ip dhcp excluded-address 192.168.1.66 192.168.1.67
-ip dhcp excluded-address 192.168.1.130 192.168.1.131
-ip dhcp excluded-address 192.168.1.194 192.168.1.195
+ip dhcp excluded-address 192.168.1.2 192.168.1.5
+ip dhcp excluded-address 192.168.1.66 192.168.1.69
+ip dhcp excluded-address 192.168.1.130 192.168.1.133
+ip dhcp excluded-address 192.168.1.194 192.168.1.197
 ip dhcp pool lan10
 network 192.168.1.0 255.255.255.192
 default-router 192.168.1.1
@@ -248,15 +268,10 @@ default-router 192.168.1.193
 dns-server 192.168.11.11
 # Telnet/SSH
 SW0
-ip default-gateway 192.168.1.1
-interface vlan 10
-ip address 192.168.1.3 255.255.255.192
-interface vlan 20
-ip address 192.168.1.67 255.255.255.192
-interface vlan 30
-ip address 192.168.1.131 255.255.255.192
-interface vlan 40
-ip address 192.168.1.195 255.255.255.192
+ip default-gateway 192.168.11.9
+interface vlan 1
+ip address 192.168.11.10 255.255.255.248
+no shutdown
 username user1 password pass1
 line vty 0 15
 login local
@@ -265,12 +280,16 @@ SW1
 ip default-gateway 192.168.1.1
 interface vlan 10
 ip address 192.168.1.3 255.255.255.192
+no shutdown
 interface vlan 20
 ip address 192.168.1.67 255.255.255.192
+no shutdown
 interface vlan 30
 ip address 192.168.1.131 255.255.255.192
+no shutdown
 interface vlan 40
 ip address 192.168.1.195 255.255.255.192
+no shutdown
 username user1 password pass1
 line vty 0 15
 login local
@@ -278,13 +297,13 @@ login local
 SW2
 ip default-gateway 192.168.1.1
 interface vlan 10
-ip address 192.168.1.3 255.255.255.192
+ip address 192.168.1.4 255.255.255.192
 interface vlan 20
-ip address 192.168.1.67 255.255.255.192
+ip address 192.168.1.68 255.255.255.192
 interface vlan 30
-ip address 192.168.1.131 255.255.255.192
+ip address 192.168.1.132 255.255.255.192
 interface vlan 40
-ip address 192.168.1.195 255.255.255.192
+ip address 192.168.1.196 255.255.255.192
 username user1 password pass1
 line vty 0 15
 login local
@@ -292,18 +311,19 @@ login local
 SW3
 ip default-gateway 192.168.1.1
 interface vlan 10
-ip address 192.168.1.3 255.255.255.192
+ip address 192.168.1.5 255.255.255.192
 interface vlan 20
-ip address 192.168.1.67 255.255.255.192
+ip address 192.168.1.69 255.255.255.192
 interface vlan 30
-ip address 192.168.1.131 255.255.255.192
+ip address 192.168.1.133 255.255.255.192
 interface vlan 40
-ip address 192.168.1.195 255.255.255.192
+ip address 192.168.1.197 255.255.255.192
 username user1 password pass1
 line vty 0 15
 login local
 
 SW4
+ip default-gateway 192.168.0.1
 interface vlan 1
 ip address 192.168.0.2 255.255.255.0
 no shutdown
@@ -369,10 +389,10 @@ switchport port-security violation restrict
 enable secret cacti
 service password-encryption
 ip dhcp snooping
-ip dhcp snooping vlan 1,10,20,30,40,99,100
-ip arp inspection vlan 1,10,20,30,40,99,100
+ip dhcp snooping vlan 1
+ip arp inspection vlan 1
 ip arp inspection validate dst-mac ip src-mac
-interface GigabitEthernet 0/2
+interface range GigabitEthernet 0/1-2
 switchport port-security
 switchport port-security mac-address sticky
 switchport port-security maximum 2
@@ -423,10 +443,10 @@ enable secret cacti
 service password-encryption
 ip dhcp snooping
 no ip dhcp snooping information option
-ip dhcp snooping vlan 1,10,20,30,40,99,100
+ip dhcp snooping vlan 1
 interface GigabitEthernet 0/1
 ip dhcp snooping trust
-ip arp inspection vlan 1,10,20,30,40,99,100
+ip arp inspection vlan 1
 ip arp inspection validate dst-mac ip src-mac
 
 R0
@@ -587,12 +607,14 @@ network 192.168.3.0 0.0.0.3 a 0
 
 RP
 hostname RP
+ipv6 unicast-routing
 interface Serial 0/0/0
 ip address 172.16.0.2 255.255.255.252
 no shutdown
 ip nat outside
 interface GigabitEthernet 0/0
 ip address 172.16.1.1 255.255.255.0
+ipv6 address fc50::1/12
 no shutdown
 ip nat inside
 interface tunnel 1
@@ -604,7 +626,7 @@ router ospf 1
 network 172.16.1.0 0.0.0.255 a 0
 network 192.168.3.0 0.0.0.3 a 0
 
-RR RP
+(RR RP)
 ip access-list standard NAT_ACL
 permit any
 ip nat inside source list NAT_ACL interface Serial 0/0/0 overload
