--- a/conf.config
+++ b/conf.config
@@ -21,6 +21,8 @@ ip address 1.1.1.1 255.255.255.248
 no shutdown
 
 R0
+ip domain name cacti.hu
+ip name-server 10.0.0.10
 hostname R0
 interface Serial 0/0/0
 ip address 10.0.0.1 255.255.255.248
@@ -36,6 +38,8 @@ ip address 192.168.0.1 255.255.255.0
 no shutdown
 
 R1
+ip domain name cacti.hu
+ip name-server 192.168.11.11
 hostname R1
 interface Serial 0/0/1
 ip address 10.0.0.10 255.255.255.248
@@ -53,6 +57,8 @@ ip address 192.168.11.1 255.255.255.252
 no shutdown
 
 R2
+ip domain name cacti.hu
+ip name-server 192.168.11.11
 hostname R2
 interface Serial 0/0/0
 ip address 10.0.0.2 255.255.255.248
@@ -65,6 +71,8 @@ ip address 192.168.11.13 255.255.255.248
 no shutdown
 
 SW0
+ip domain name cacti.hu
+ip name-server 192.168.11.11
 hostname SW0
 interface range FastEthernet 0/1, GigabitEthernet 0/1-2
 switchport mode access
@@ -76,6 +84,8 @@ switchport access vlan 100
 shutdown
 
 SW1
+ip domain name cacti.hu
+ip name-server 192.168.11.11
 hostname SW1
 interface range FastEthernet 0/3-20, GigabitEthernet 0/2
 switchport mode access
@@ -84,6 +94,8 @@ switchport access vlan 100
 shutdown
 
 SW2
+ip domain name cacti.hu
+ip name-server 192.168.11.11
 hostname SW2
 interface range FastEthernet 0/3-18, FastEthernet 0/23-24, GigabitEthernet 0/1-2
 switchport mode access
@@ -92,6 +104,8 @@ switchport access vlan 100
 shutdown
 
 SW3
+ip domain name cacti.hu
+ip name-server 192.168.11.11
 hostname SW3
 interface range FastEthernet 0/3-10, FastEthernet 0/13-18, FastEthernet 0/21-22, GigabitEthernet 0/1-2
 switchport mode access
@@ -100,6 +114,7 @@ switchport access vlan 100
 shutdown
 
 SW4
+ip domain name cacti.hu
 hostname SW4
 interface range FastEthernet 0/1, GigabitEthernet 0/1
 switchport mode access
@@ -374,6 +389,8 @@ R1
 interface GigabitEthernet 0/1
 standby version 2
 standby ip 192.168.11.9
+standby preempt
+standby priority 255
 
 R2
 interface GigabitEthernet 0/1
@@ -527,7 +544,7 @@ ip nat inside source static tcp 10.0.0.10 80 1.1.1.2 80
 ip nat inside source static tcp 10.0.0.10 443 1.1.1.2 443
 
 R1
-interface range GigabitEthernet 0/0-2
+interface range GigabitEthernet 0/1-2, GigabitEthernet 0/0.10, GigabitEthernet 0/0.20, GigabitEthernet 0/0.30, GigabitEthernet 0/0.40
 ip nat inside
 interface Serial 0/0/0
 ip nat inside
@@ -540,7 +557,7 @@ ip nat inside source list NAT_ACL pool NAT_PL overload
 ip nat inside source static tcp 192.168.11.11 80 10.0.0.10 80
 ip nat inside source static tcp 192.168.11.11 443 10.0.0.10 443
 ip nat inside source static tcp 192.168.11.11 53 10.0.0.10 53
-ip nat inside source static udp 192.168.11.11 53 10.0.0.10 53
+ip nat inside source static udp 192.168.11.11 69 10.0.0.10 69
 
 R2
 interface GigabitEthernet 0/1
