--- a/conf.config
+++ b/conf.config
@@ -74,10 +74,10 @@ SW0
 ip domain name cacti.hu
 ip name-server 192.168.11.11
 hostname SW0
-interface range FastEthernet 0/1, GigabitEthernet 0/1-2
+interface range GigabitEthernet 1/0/1, GigabitEthernet 1/0/23-24
 switchport mode access
 switchport nonegotiate
-interface range FastEthernet 0/2-24
+interface range GigabitEthernet 1/0/2-22
 switchport mode access
 switchport nonegotiate
 switchport access vlan 100
@@ -97,7 +97,7 @@ SW2
 ip domain name cacti.hu
 ip name-server 192.168.11.11
 hostname SW2
-interface range FastEthernet 0/3-18, FastEthernet 0/23-24, GigabitEthernet 0/1-2
+interface range FastEthernet 0/3-20, GigabitEthernet 0/1-2
 switchport mode access
 switchport nonegotiate
 switchport access vlan 100
@@ -107,7 +107,7 @@ SW3
 ip domain name cacti.hu
 ip name-server 192.168.11.11
 hostname SW3
-interface range FastEthernet 0/3-10, FastEthernet 0/13-18, FastEthernet 0/21-22, GigabitEthernet 0/1-2
+interface range FastEthernet 0/3-10, FastEthernet 0/13-20, GigabitEthernet 0/1-2
 switchport mode access
 switchport nonegotiate
 switchport access vlan 100
@@ -116,10 +116,10 @@ shutdown
 SW4
 ip domain name cacti.hu
 hostname SW4
-interface range FastEthernet 0/1, GigabitEthernet 0/1
+interface range GigabitEthernet 1/0/1, GigabitEthernet 1/0/24
 switchport mode access
 switchport nonegotiate
-interface range FastEthernet 0/2-24, GigabitEthernet 0/2
+interface range FastEthernet 1/0/2-23
 switchport mode access
 switchport nonegotiate
 switchport access vlan 100
@@ -203,34 +203,12 @@ switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 spanning-tree mode rapid-pvst
 spanning-tree vlan 10,20,30,40
-spanning-tree vlan 10,20,30,40 root primary
+spanning-tree vlan 10 root primary
 spanning-tree portfast default
 spanning-tree portfast bpduguard default
 
 SW2
-interface range FastEthernet 0/19-20
-channel-group 1 mode active
 interface range FastEthernet 0/21-22
-channel-group 2 mode active
-interface port-channel 1
-no shutdown
-switchport mode trunk
-switchport nonegotiate
-switchport trunk native vlan 99
-switchport trunk allowed vlan 10,20,30,40
-interface port-channel 2
-no shutdown
-switchport mode trunk
-switchport nonegotiate
-switchport trunk native vlan 99
-switchport trunk allowed vlan 10,20,30,40
-spanning-tree mode rapid-pvst
-spanning-tree vlan 10,20,30,40
-spanning-tree portfast default
-spanning-tree portfast bpduguard default
-
-SW3
-interface range FastEthernet 0/19-20
 channel-group 1 mode active
 interface range FastEthernet 0/23-24
 channel-group 2 mode active
@@ -248,6 +226,30 @@ switchport trunk native vlan 99
 switchport trunk allowed vlan 10,20,30,40
 spanning-tree mode rapid-pvst
 spanning-tree vlan 10,20,30,40
+spanning-tree vlan 40 root primary
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
+
+SW3
+interface range FastEthernet 0/21-22
+channel-group 1 mode active
+interface range FastEthernet 0/23-24
+channel-group 2 mode active
+interface port-channel 1
+no shutdown
+switchport mode trunk
+switchport nonegotiate
+switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40
+interface port-channel 2
+no shutdown
+switchport mode trunk
+switchport nonegotiate
+switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40
+spanning-tree mode rapid-pvst
+spanning-tree vlan 10,20,30,40
+spanning-tree vlan 20,30 root primary
 spanning-tree portfast default
 spanning-tree portfast bpduguard default
 # DHCP
@@ -313,12 +315,16 @@ SW2
 ip default-gateway 192.168.1.1
 interface vlan 10
 ip address 192.168.1.4 255.255.255.192
+no shutdown
 interface vlan 20
 ip address 192.168.1.68 255.255.255.192
+no shutdown
 interface vlan 30
 ip address 192.168.1.132 255.255.255.192
+no shutdown
 interface vlan 40
 ip address 192.168.1.196 255.255.255.192
+no shutdown
 username user1 password pass1
 line vty 0 15
 login local
@@ -327,12 +333,16 @@ SW3
 ip default-gateway 192.168.1.1
 interface vlan 10
 ip address 192.168.1.5 255.255.255.192
+no shutdown
 interface vlan 20
 ip address 192.168.1.69 255.255.255.192
+no shutdown
 interface vlan 30
 ip address 192.168.1.133 255.255.255.192
+no shutdown
 interface vlan 40
 ip address 192.168.1.197 255.255.255.192
+no shutdown
 username user1 password pass1
 line vty 0 15
 login local
@@ -398,10 +408,9 @@ standby version 2
 standby ip 192.168.11.9
 # Biztonság
 SW0
-interface range FastEthernet 0/1-24, GigabitEthernet 0/1
+interface range GigabitEthernet 1/0/1-22
 switchport port-security
 switchport port-security mac-address sticky
-switchport port-security maximum 1
 switchport port-security violation restrict
 enable secret cacti
 service password-encryption
@@ -409,7 +418,7 @@ ip dhcp snooping
 ip dhcp snooping vlan 1
 ip arp inspection vlan 1
 ip arp inspection validate dst-mac ip src-mac
-interface range GigabitEthernet 0/1-2
+interface range GigabitEthernet 1/0/23-24
 switchport port-security
 switchport port-security mac-address sticky
 switchport port-security maximum 2
@@ -419,7 +428,16 @@ SW1
 interface range FastEthernet 0/1-20, GigabitEthernet 0/2
 switchport port-security
 switchport port-security mac-address sticky
-switchport port-security maximum 1
+switchport port-security violation restrict
+interface FastEthernet 0/2
+switchport port-security maximum 2
+interface port-channel 1
+switchport port-security
+switchport port-security mac-address sticky
+switchport port-security violation restrict
+interface port-channel 2
+switchport port-security
+switchport port-security mac-address sticky
 switchport port-security violation restrict
 enable secret cacti
 service password-encryption
@@ -432,36 +450,52 @@ ip arp inspection vlan 1,10,20,30,40,99,100
 ip arp inspection validate dst-mac ip src-mac
 
 SW2
-interface range FastEthernet 0/1-18, FastEthernet 0/23-24, GigabitEthernet 0/1-2
+interface range FastEthernet 0/1-20, GigabitEthernet 0/1-2
 switchport port-security
 switchport port-security mac-address sticky
-switchport port-security maximum 1
+switchport port-security violation restrict
+interface FastEthernet 0/2
+switchport port-security maximum 2
+interface port-channel 1
+switchport port-security
+switchport port-security mac-address sticky
+switchport port-security violation restrict
+interface port-channel 2
+switchport port-security
+switchport port-security mac-address sticky
 switchport port-security violation restrict
 enable secret cacti
 service password-encryption
-#!port channel dhcp snooping trust!
 
 SW3
-interface range FastEthernet 0/1-18, FastEthernet 0/21-22, GigabitEthernet 0/1-2
+interface range FastEthernet 0/1-20, GigabitEthernet 0/1-2
 switchport port-security
 switchport port-security mac-address sticky
-switchport port-security maximum 1
+switchport port-security violation restrict
+interface range FastEthernet 0/2, FastEthernet 0/12
+switchport port-security maximum 2
+interface port-channel 1
+switchport port-security
+switchport port-security mac-address sticky
+switchport port-security violation restrict
+interface port-channel 2
+switchport port-security
+switchport port-security mac-address sticky
 switchport port-security violation restrict
 enable secret cacti
 service password-encryption
 
 SW4
-interface range FastEthernet 0/1-24, GigabitEthernet 0/1-2
+interface range GigabitEthernet 1/0/1-24
 switchport port-security
 switchport port-security mac-address sticky
-switchport port-security maximum 1
 switchport port-security violation restrict
 enable secret cacti
 service password-encryption
 ip dhcp snooping
 no ip dhcp snooping information option
 ip dhcp snooping vlan 1
-interface GigabitEthernet 0/1
+interface GigabitEthernet 1/0/24
 ip dhcp snooping trust
 ip arp inspection vlan 1
 ip arp inspection validate dst-mac ip src-mac
