--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -1,9 +1,13 @@
 
------------ISP-k--------------
+#-----------ISP-k--------------
 
-ISP1
+#ISP1
+
+#!Portok
+
 ena
 conf t
+hostname ISP1
 int Se0/0/1
 ip add 200.200.200.1 255.255.255.252
 no sh
@@ -16,9 +20,13 @@ no sh
 exit
 
 
-ISP2
+#ISP2
+
+#!Portok
+
 ena
 conf t
+hostname ISP2
 int Se0/0/0
 ip add 200.200.200.6 255.255.255.252
 no sh
@@ -34,9 +42,13 @@ no sh
 exit
 
 
-ISP3
+#ISP3
+
+#!Portok
+
 ena
 conf t
+hostname ISP3
 int Se0/0/0
 ip add 30.0.0.1 255.255.255.240
 no sh
@@ -52,9 +64,13 @@ no sh
 exit
 
 
-ISP4
+#ISP4
+
+#!Portok
+
 ena
 conf t
+hostname ISP4
 int Se0/0/0
 ip add 10.0.0.17 255.255.255.240
 no sh
@@ -67,14 +83,15 @@ no sh
 exit
 
 
------------SITE-Routerek--------------
+#-----------SITE-Routerek--------------
 
 
-SITE1
+#SITE1
 
-!Portok
+#!Portok
 ena
 conf t
+hostname SITE1
 int Se0/0/0
 ip add 10.0.0.18 255.255.255.240
 no sh
@@ -90,11 +107,12 @@ no sh
 exit
 
 
-SITE2
+#SITE2x1
 
-!Portok
+#!Portok
 ena
 conf t
+hostname SITE2x1
 int Se0/1/0
 ip add 20.0.0.2 255.255.255.240
 no sh
@@ -105,9 +123,13 @@ exit
 
 
 
-SITE3
+#SITE2x2
+
+#!Portok
+
 ena
 conf t
+hostname SITE2x2
 int Se0/1/1
 ip add 20.0.0.18 255.255.255.240
 no sh
@@ -116,11 +138,12 @@ ip add 22.0.0.2 255.255.255.252
 no sh
 
 
-SITE4
+#SITE3
 
-!Portok
+#!Portok
 ena
 conf t
+hostname SITE3
 int Se0/0/0
 ip add 30.0.0.2 255.255.255.240
 no sh
@@ -135,7 +158,7 @@ ip add 192.168.3.33 255.255.255.248
 no sh
 exit
 
-!DHCP
+#!DHCP
 ip dhcp pool AP
 net 192.168.3.0 255.255.255.224
 default-router 192.168.3.1
@@ -145,10 +168,13 @@ net 192.168.3.32 255.255.255.248
 default-router 192.168.3.33
 exit
 
-----------Switchek-------------
+#----------Switchek-------------
 
 
-SW1
+#SW1
+
+#!Portok
+
 ena
 conf t
 vlan 50
@@ -169,7 +195,10 @@ switchport trunk native vlan 99
 exit
 
 
-SW2
+#SW2
+
+#!Portok
+
 ena
 conf t
 vlan 50
@@ -190,7 +219,10 @@ switchport access vlan 50
 exit
 
 
-SW3
+#SW3
+
+#!Portok
+
 ena
 conf t
 vlan 40
@@ -205,9 +237,3 @@ int range fa0/1-2
 switchport mode access
 switchport access vlan 40
 exit
-
-
-
-
-
-
