--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -217,6 +217,12 @@ int range fa0/1-2
 switchport mode access
 switchport access vlan 50
 exit
+int fa0/3
+switchport mode access
+switchport access vlan 60
+exit
+
+
 
 
 #SW3
