--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -2,12 +2,11 @@
 #-----------ISP-k--------------
 
 #ISP1
-
-#!Portok
-
 ena
 conf t
 hostname ISP1
+
+#!Portok
 int Se0/0/1
 ip add 200.200.200.1 255.255.255.252
 no sh
@@ -21,12 +20,11 @@ exit
 
 
 #ISP2
-
-#!Portok
-
 ena
 conf t
 hostname ISP2
+
+#!Portok
 int Se0/0/0
 ip add 200.200.200.6 255.255.255.252
 no sh
@@ -43,12 +41,11 @@ exit
 
 
 #ISP3
-
-#!Portok
-
 ena
 conf t
 hostname ISP3
+
+#!Portok
 int Se0/0/0
 ip add 30.0.0.1 255.255.255.240
 no sh
@@ -65,12 +62,11 @@ exit
 
 
 #ISP4
-
-#!Portok
-
 ena
 conf t
 hostname ISP4
+
+#!Portok
 int Se0/0/0
 ip add 10.0.0.17 255.255.255.240
 no sh
@@ -85,13 +81,12 @@ exit
 
 #-----------SITE-Routerek--------------
 
-
 #SITE1
-
-#!Portok
 ena
 conf t
 hostname SITE1
+
+#!Portok
 int Se0/0/0
 ip add 10.0.0.18 255.255.255.240
 no sh
@@ -108,11 +103,11 @@ exit
 
 
 #SITE2x1
-
-#!Portok
 ena
 conf t
 hostname SITE2x1
+
+#!Portok
 int Se0/1/0
 ip add 20.0.0.2 255.255.255.240
 no sh
@@ -124,12 +119,11 @@ exit
 
 
 #SITE2x2
-
-#!Portok
-
 ena
 conf t
 hostname SITE2x2
+
+#!Portok
 int Se0/1/1
 ip add 20.0.0.18 255.255.255.240
 no sh
@@ -138,12 +132,14 @@ ip add 22.0.0.2 255.255.255.252
 no sh
 
 
-#SITE3
 
-#!Portok
+
+#SITE3
 ena
 conf t
 hostname SITE3
+
+#!Portok
 int Se0/0/0
 ip add 30.0.0.2 255.255.255.240
 no sh
@@ -172,18 +168,22 @@ exit
 
 
 #SW1
-
-#!Portok
-
 ena
 conf t
+hostname SW1
+
+#!Vlanok
 vlan 50
 name Szerverfelho
 vlan 60
 name Adatbazis
 vlan 70
 name Szerverek
+vlan 5
+name Management
 exit
+
+#!Portok
 int range fa0/1-2
 switchport mode access
 switchport access vlan 70
@@ -196,21 +196,25 @@ exit
 
 
 #SW2
-
-#!Portok
-
 ena
 conf t
+hostname SW2
+
+#!Vlanok
 vlan 50
 name Szerverfelho
 vlan 60
 name Adatbazis
 vlan 70
 name Szerverek
+vlan 5
+name Management
 exit
+
+#!Portok
 int range g0/1-2
 switchport mode trunk
-switchport trunk allowed vlan 50,60,70,99
+switchport trunk allowed vlan 50,60,70,5,99
 switchport trunk native vlan 99
 exit
 int range fa0/1-2
@@ -221,8 +225,10 @@ int fa0/3
 switchport mode access
 switchport access vlan 60
 exit
-
-
+int fa0/3
+switchport mode access
+switchport access vlan 5
+exit
 
 
 #SW3
@@ -243,3 +249,125 @@ int range fa0/1-2
 switchport mode access
 switchport access vlan 40
 exit
+
+
+
+
+
+#SW4
+ena
+conf t
+hostname SW4
+
+#!VTP
+vtp domain cisco
+vtp password cisco
+vtp mode server
+vtp version 2
+
+#!Portok
+int range g0/1-2
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+int fa0/1
+switchport mode access
+switchport access vlan 2
+int fa0/2
+switchport mode access
+switchport access vlan 3
+
+
+#!Vlanok
+vlan 10
+name Programozok
+vlan 20
+name Designer
+vlan 30
+name hangtechnika
+vlan 40
+name Rendszergazda
+vlan 3
+name Szerverszoba
+vlan 2
+name Management1
+
+
+
+
+
+#MS1
+ena
+conf t
+hostname MS1
+
+#!VTP
+vtp mode client
+vtp domain cisco
+vtp password cisco
+
+#!Portok
+int g1/0/19
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+exit
+int g1/0/20
+switchport mode access
+switchport access vlan 10
+exit
+int range g1/0/2-3
+switchport mode access
+switchport access vlan 20
+exit
+
+#!Etherchannel
+int range g1/0/23-24
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+
+
+
+
+
+#MS2
+ena
+conf t
+hostname MS2
+
+#!VTP
+vtp mode client
+vtp domain cisco
+vtp password cisco
+
+#!Portok
+int g1/0/20
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+exit
+int g1/0/3
+switchport mode access
+switchport access vlan 40
+exit
+int range g1/0/7-8
+switchport mode access
+switchport access vlan 30
+exit
+
+#!Etherchannel
+int range g1/0/23-24
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+
+
+
+
+
+
+
+
+
+
