--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -114,6 +114,24 @@ no sh
 int g0/0
 ip add 22.0.0.1 255.255.255.252
 no sh
+
+int g0/1
+no sh
+int g0/1.50
+encapsulation dot1q 50
+ip add 192.168.2.2 255.255.255.240
+standby version 2
+standby 50 ip 192.168.2.1
+int g0/1.60
+encapsulation dot1q 60
+ip add 192.168.2.18 255.255.255.248
+standby version 2
+standby 60 ip 192.168.2.17
+int g0/2
+ip add 192.168.2.26 255.255.255.248
+standby version 2
+standby 70 ip 192.168.2.25
+no sh
 exit
 
 
@@ -131,6 +149,24 @@ int g0/0
 ip add 22.0.0.2 255.255.255.252
 no sh
 
+int g0/2
+no sh
+int g0/2.50
+encapsulation dot1q 50
+ip add 192.168.2.3 255.255.255.240
+standby version 2
+standby 50 ip 192.168.2.1
+int g0/2.60
+encapsulation dot1q 60
+ip add 192.168.2.19 255.255.255.248
+standby version 2
+standby 60 ip 192.168.2.17
+int g0/1
+ip add 192.168.2.27 255.255.255.248
+standby version 2
+standby 70 ip 192.168.2.25
+no sh
+exit
 
 
 
@@ -172,29 +208,6 @@ ena
 conf t
 hostname SW1
 
-#!Vlanok
-vlan 50
-name Szerverfelho
-vlan 60
-name Adatbazis
-vlan 70
-name Szerverek
-vlan 5
-name Management
-exit
-
-#!Portok
-int range fa0/1-2
-switchport mode access
-switchport access vlan 70
-exit
-int range g0/1-2
-switchport mode trunk
-switchport trunk allowed vlan 50,60,70,99
-switchport trunk native vlan 99
-exit
-
-
 #SW2
 ena
 conf t
@@ -205,16 +218,12 @@ vlan 50
 name Szerverfelho
 vlan 60
 name Adatbazis
-vlan 70
-name Szerverek
-vlan 5
-name Management
 exit
 
 #!Portok
 int range g0/1-2
 switchport mode trunk
-switchport trunk allowed vlan 50,60,70,5,99
+switchport trunk allowed vlan 50,60,99
 switchport trunk native vlan 99
 exit
 int range fa0/1-2
@@ -224,10 +233,6 @@ exit
 int fa0/3
 switchport mode access
 switchport access vlan 60
-exit
-int fa0/3
-switchport mode access
-switchport access vlan 5
 exit
 
 
