--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -156,15 +156,18 @@ encapsulation dot1q 50
 ip add 192.168.2.3 255.255.255.240
 standby version 2
 standby 50 ip 192.168.2.1
+standby 50 preempt
 int g0/2.60
 encapsulation dot1q 60
 ip add 192.168.2.19 255.255.255.248
 standby version 2
 standby 60 ip 192.168.2.17
+standby 60 preempt
 int g0/1
 ip add 192.168.2.27 255.255.255.248
 standby version 2
 standby 70 ip 192.168.2.25
+standby 70 preempt
 no sh
 exit
 
