Szétbombázás majd újra összerakás SITE1

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -81,10 +81,10 @@ exit
 
 #-----------SITE-Routerek--------------
 
-#SITE1
+#SITE1x1
 ena
 conf t
-hostname SITE1
+hostname SITE1x1
 
 #!Portok
 int Se0/0/0
@@ -97,9 +97,26 @@ int g0/0
 ip add 11.0.0.5 255.255.255.252
 no sh
 int g0/1
-ip add 11.0.0.1 255.255.255.252
 no sh
-exit
+
+
+
+#SITE1x2
+ena
+conf t
+hostname SITE1x2
+
+#!Portok
+int Se0/0/0
+ip add 10.0.0.18 255.255.255.240
+no sh
+int g0/0
+ip add 11.0.0.6 255.255.255.252
+no sh
+int g0/1
+no sh
+
+
 
 
 #SITE2x1
@@ -277,7 +294,7 @@ vtp mode server
 vtp version 2
 
 #!Portok
-int range g0/1-2
+int range fa0/17-24
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
@@ -287,7 +304,6 @@ switchport access vlan 2
 int fa0/2
 switchport mode access
 switchport access vlan 3
-
 
 #!Vlanok
 vlan 10
@@ -306,11 +322,10 @@ name Management1
 
 
 
-
-#MS1
+#SW5
 ena
 conf t
-hostname MS1
+hostname SW5
 
 #!VTP
 vtp mode client
@@ -342,10 +357,10 @@ switchport trunk native vlan 99
 
 
 
-#MS2
+#SW6
 ena
 conf t
-hostname MS2
+hostname SW6
 
 #!VTP
 vtp mode client
