--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -6,7 +6,7 @@ ena
 conf t
 hostname ISP1
 
-#!Portok
+#Portok
 int Se0/0/1
 ip add 200.200.200.1 255.255.255.252
 no sh
@@ -24,7 +24,7 @@ ena
 conf t
 hostname ISP2
 
-#!Portok
+#Portok
 int Se0/0/0
 ip add 200.200.200.6 255.255.255.252
 no sh
@@ -45,7 +45,7 @@ ena
 conf t
 hostname ISP3
 
-#!Portok
+#Portok
 int Se0/0/0
 ip add 30.0.0.1 255.255.255.240
 no sh
@@ -66,7 +66,7 @@ ena
 conf t
 hostname ISP4
 
-#!Portok
+#Portok
 int Se0/0/0
 ip add 10.0.0.17 255.255.255.240
 no sh
@@ -86,7 +86,7 @@ ena
 conf t
 hostname SITE1
 
-#!Portok
+#Portok
 int Se0/0/0
 ip add 10.0.0.18 255.255.255.240
 no sh
@@ -107,7 +107,7 @@ ena
 conf t
 hostname SITE2x1
 
-#!Portok
+#Portok
 int Se0/1/0
 ip add 20.0.0.2 255.255.255.240
 no sh
@@ -141,7 +141,7 @@ ena
 conf t
 hostname SITE2x2
 
-#!Portok
+#Portok
 int Se0/1/1
 ip add 20.0.0.18 255.255.255.240
 no sh
@@ -181,7 +181,7 @@ ena
 conf t
 hostname SITE3
 
-#!Portok
+#Portok
 int Se0/0/0
 ip add 30.0.0.2 255.255.255.240
 no sh
@@ -196,7 +196,7 @@ ip add 192.168.3.33 255.255.255.248
 no sh
 exit
 
-#!DHCP
+#DHCP
 ip dhcp pool AP
 net 192.168.3.0 255.255.255.224
 default-router 192.168.3.1
@@ -219,14 +219,14 @@ ena
 conf t
 hostname SW2
 
-#!Vlanok
+#Vlanok
 vlan 50
 name Szerverfelho
 vlan 60
 name Adatbazis
 exit
 
-#!Portok
+#Portok
 int range g0/1-2
 switchport mode trunk
 switchport trunk allowed vlan 50,60,99
@@ -244,7 +244,7 @@ exit
 
 #SW3
 
-#!Portok
+#Portok
 
 ena
 conf t
@@ -270,13 +270,13 @@ ena
 conf t
 hostname SW4
 
-#!VTP
+#VTP
 vtp domain cisco
 vtp password cisco
 vtp mode server
 vtp version 2
 
-#!Portok
+#Portok
 int range g0/1-2
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
@@ -289,7 +289,7 @@ switchport mode access
 switchport access vlan 3
 
 
-#!Vlanok
+#Vlanok
 vlan 10
 name Programozok
 vlan 20
@@ -303,21 +303,31 @@ name Szerverszoba
 vlan 2
 name Management1
 
+#Etherchannel
+int range g1/0/21-24
+
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+int range g1/0/19-21
+
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
 
 
 
-
-#MS1
+#SW5
 ena
 conf t
-hostname MS1
+hostname SW5
 
-#!VTP
+#VTP
 vtp mode client
 vtp domain cisco
 vtp password cisco
 
-#!Portok
+#Portok
 int g1/0/19
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
@@ -332,8 +342,16 @@ switchport mode access
 switchport access vlan 20
 exit
 
-#!Etherchannel
-int range g1/0/23-24
+#Etherchannel
+int range g1/0/22-24
+
+
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+int range g1/0/19-21
+
+
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
@@ -342,17 +360,17 @@ switchport trunk native vlan 99
 
 
 
-#MS2
+#SW6
 ena
 conf t
-hostname MS2
+hostname SW6
 
-#!VTP
+#VTP
 vtp mode client
 vtp domain cisco
 vtp password cisco
 
-#!Portok
+#Portok
 int g1/0/20
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
@@ -367,12 +385,17 @@ switchport mode access
 switchport access vlan 30
 exit
 
-#!Etherchannel
-int range g1/0/23-24
+#Etherchannel
+int range g1/0/22-24
+
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
+int range g1/0/19-21
 
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
 
 
 
