--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -81,26 +81,25 @@ exit
 
 #-----------SITE-Routerek--------------
 
-#SITE1
+#SITE1x0
 ena
 conf t
-hostname SITE1
+hostname SITE1x0
 
-#Portok
-int Se0/0/0
-ip add 10.0.0.18 255.255.255.240
-no sh
-int Se0/1/0
-ip add 10.0.0.2 255.255.255.240
-no sh
-int g0/0
-ip add 11.0.0.5 255.255.255.252
-no sh
-int g0/1
-ip add 11.0.0.1 255.255.255.252
-no sh
-exit
+#SITE1x1
+ena
+conf t
+hostname SITE1x1
 
+#SITE1x2
+ena
+conf t
+hostname SITE1x2
+
+#SITE2x0
+ena
+conf t
+hostname SITE2x0
 
 #SITE2x1
 ena
@@ -108,12 +107,8 @@ conf t
 hostname SITE2x1
 
 #Portok
-int Se0/1/0
-ip add 20.0.0.2 255.255.255.240
-no sh
-int g0/0
-ip add 22.0.0.1 255.255.255.252
-no sh
+
+
 
 int g0/1
 no sh
@@ -127,7 +122,7 @@ encapsulation dot1q 60
 ip add 192.168.2.18 255.255.255.248
 standby version 2
 standby 60 ip 192.168.2.17
-int g0/2
+int g0/1.70
 ip add 192.168.2.26 255.255.255.248
 standby version 2
 standby 70 ip 192.168.2.25
@@ -142,12 +137,7 @@ conf t
 hostname SITE2x2
 
 #Portok
-int Se0/1/1
-ip add 20.0.0.18 255.255.255.240
-no sh
-int g0/0
-ip add 22.0.0.2 255.255.255.252
-no sh
+
 
 int g0/2
 no sh
@@ -165,7 +155,7 @@ standby version 2
 standby 60 ip 192.168.2.17
 standby 60 priority 110
 standby 60 preempt
-int g0/1
+int g0/2.70
 ip add 192.168.2.27 255.255.255.248
 standby version 2
 standby 70 ip 192.168.2.25
@@ -209,34 +199,30 @@ exit
 #----------Switchek-------------
 
 
-#SW1
+#SW2x1
 ena
 conf t
-hostname SW1
-
-#SW2
-ena
-conf t
-hostname SW2
+hostname SW2x1
 
 #Vlanok
 vlan 50
 name Szerverfelho
 vlan 60
 name Adatbazis
+vlan 70
 exit
 
 #Portok
 int range g0/1-2
 switchport mode trunk
-switchport trunk allowed vlan 50,60,99
+switchport trunk allowed vlan 50,60,70,99
 switchport trunk native vlan 99
 exit
-int range fa0/1-2
+int range fa0/1-14
 switchport mode access
 switchport access vlan 50
 exit
-int fa0/3
+int fa0/15
 switchport mode access
 switchport access vlan 60
 exit
@@ -256,7 +242,7 @@ switchport mode trunk
 switchport trunk allowed vlan 70,99
 switchport trunk native vlan 99
 exit
-int range fa0/1-2
+int range fa0/1-6
 switchport mode access
 switchport access vlan 70
 exit
@@ -265,10 +251,10 @@ exit
 
 
 
-#SW4
+#SW1x1
 ena
 conf t
-hostname SW4
+hostname SW1x1
 
 #VTP
 vtp domain cisco
@@ -277,10 +263,6 @@ vtp mode server
 vtp version 2
 
 #Portok
-int range g0/1-2
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
-switchport trunk native vlan 99
 int fa0/1
 switchport mode access
 switchport access vlan 2
@@ -304,12 +286,12 @@ vlan 2
 name Management1
 
 #Etherchannel
-int range g1/0/21-24
+int range fa0/21-24
 
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
-int range g1/0/19-21
+int range fa0/19-21
 
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
@@ -317,10 +299,10 @@ switchport trunk native vlan 99
 
 
 
-#SW5
+#SW1x2
 ena
 conf t
-hostname SW5
+hostname SW1x2
 
 #VTP
 vtp mode client
@@ -328,28 +310,19 @@ vtp domain cisco
 vtp password cisco
 
 #Portok
-int g1/0/19
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
-switchport trunk native vlan 99
-exit
-int g1/0/20
-switchport mode access
-switchport access vlan 10
-exit
-int range g1/0/2-3
+int range fa0/1-14
 switchport mode access
 switchport access vlan 20
 exit
 
 #Etherchannel
-int range g1/0/22-24
+int range fa0/22-24
 
 
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
-int range g1/0/19-21
+int range fa0/19-21
 
 
 switchport mode trunk
@@ -360,10 +333,10 @@ switchport trunk native vlan 99
 
 
 
-#SW6
+#SW1x3
 ena
 conf t
-hostname SW6
+hostname SW1x3
 
 #VTP
 vtp mode client
@@ -371,27 +344,27 @@ vtp domain cisco
 vtp password cisco
 
 #Portok
-int g1/0/20
+int range g0/1
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
 exit
-int g1/0/3
+int g0/2
 switchport mode access
 switchport access vlan 40
 exit
-int range g1/0/7-8
+int range fa0/1-6
 switchport mode access
 switchport access vlan 30
 exit
 
 #Etherchannel
-int range g1/0/22-24
+int range fa0/22-24
 
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
-int range g1/0/19-21
+int range fa0/19-21
 
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
