Etherchannel, Összes port újra

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -7,14 +7,17 @@ conf t
 hostname ISP1
 
 #Portok
-int Se0/0/1
-ip add 200.200.200.1 255.255.255.252
-no sh
-int Se0/0/0
+int Se0/2/0
 ip add 200.200.200.5 255.255.255.252
 no sh
-int Se0/1/0
+int Se0/2/1
+ip add 200.200.200.1 255.255.255.252
+no sh
+int Se0/3/0
 ip add 20.0.0.1 255.255.255.240
+no sh
+int g0/0
+ip add 221.234.147.241 255.255.255.252
 no sh
 exit
 
@@ -25,17 +28,17 @@ conf t
 hostname ISP2
 
 #Portok
-int Se0/0/0
-ip add 200.200.200.6 255.255.255.252
-no sh
-int Se0/0/1
+int Se0/2/0
 ip add 200.200.200.9 255.255.255.252
 no sh
-int Se0/1/0
-ip add 10.0.0.1 255.255.255.240
+int Se0/2/1
+ip add 200.200.200.2 255.255.255.252
 no sh
-int Se0/1/1
-ip add 20.0.0.17 255.255.255.240
+int Se0/3/0
+ip add 30.0.0.1 255.255.255.240
+no sh
+int g0/0
+ip add 111.111.111.1 255.255.255.252
 no sh
 exit
 
@@ -46,37 +49,18 @@ conf t
 hostname ISP3
 
 #Portok
-int Se0/0/0
-ip add 30.0.0.1 255.255.255.240
+int Se0/2/0
+ip add 200.200.200.6 255.255.255.252
 no sh
-int Se0/0/1
-ip add 200.200.200.2 255.255.255.252
-no sh
-int Se0/1/0
-ip add 200.200.200.13 255.255.255.252
-no sh
-int g0/0
-ip add 111.111.111.1 255.255.255.252
-no sh
-exit
-
-
-#ISP4
-ena
-conf t
-hostname ISP4
-
-#Portok
-int Se0/0/0
-ip add 10.0.0.17 255.255.255.240
-no sh
-int Se0/0/1
+int Se0/2/1
 ip add 200.200.200.10 255.255.255.252
 no sh
-int Se0/1/0
-ip add 200.200.200.14 255.255.255.252
+int Se0/3/0
+ip add 40.0.0.0 255.255.255.240
 no sh
 exit
+
+
 
 
 #-----------SITE-Routerek--------------
@@ -86,30 +70,84 @@ ena
 conf t
 hostname SITE1x0
 
+#Portok
+int Se0/3/0
+ip add 40.0.0.2 255.255.255.240
+no sh
+int g0/0
+ip add 192.168.1.241 255.255.255.252
+no sh
+int g0/1
+ip add 192.168.1.249 255.255.255.252
+no sh
+exit
+
+
+
 #SITE1x1
 ena
 conf t
 hostname SITE1x1
+
+#Portok
+int g0/0
+ip add 192.168.1.245 255.255.255.252
+no sh
+int g0/2
+ip add 192.168.1.242 255.255.255.252
+no sh
+exit
+
 
 #SITE1x2
 ena
 conf t
 hostname SITE1x2
 
+#Portok
+int g0/0
+ip add 192.168.1.246 255.255.255.252
+no sh
+int g0/2
+ip add 192.168.1.250 255.255.255.252
+no sh
+exit
+
+
 #SITE2x0
 ena
 conf t
 hostname SITE2x0
+do wr
+
+#Portok
+int Se0/3/0
+ip add 20.0.0.2 255.255.255.240
+no sh
+int g0/0
+ip add 192.168.2.241 255.255.255.252
+no sh
+int g0/1
+ip add 192.168.2.245 255.255.255.252
+no sh
+
+
 
 #SITE2x1
 ena
 conf t
 hostname SITE2x1
+do wr
 
 #Portok
+int g0/0
+ip add 192.168.2.249 255.255.255.252
+no sh
+int g0/2
+ip add 192.168.2.242 255.255.255.252
+no sh
 
-
-
+#HSRP
 int g0/1
 no sh
 int g0/1.50
@@ -135,10 +173,19 @@ exit
 ena
 conf t
 hostname SITE2x2
+do wr
 
 #Portok
+int g0/0
+ip add 192.168.2.250 255.255.255.252
+no sh
+int g0/1
+ip add 192.168.2.246 255.255.255.252
+no sh
+exit
 
 
+#HSRP
 int g0/2
 no sh
 int g0/2.50
@@ -170,9 +217,10 @@ exit
 ena
 conf t
 hostname SITE3
+do wr
 
 #Portok
-int Se0/0/0
+int Se0/3/0
 ip add 30.0.0.2 255.255.255.240
 no sh
 int g0/0
@@ -187,13 +235,15 @@ no sh
 exit
 
 #DHCP
-ip dhcp pool AP
+ip dhcp pool Community_Marketing
 net 192.168.3.0 255.255.255.224
 default-router 192.168.3.1
+dns-server 8.8.8.8
 exit
 ip dhcp pool Teszteles
 net 192.168.3.32 255.255.255.248
 default-router 192.168.3.33
+dns-server 8.8.8.8
 exit
 
 #----------Switchek-------------
@@ -203,6 +253,7 @@ exit
 ena
 conf t
 hostname SW2x1
+do wr
 
 #Vlanok
 vlan 50
@@ -210,6 +261,7 @@ name Szerverfelho
 vlan 60
 name Adatbazis
 vlan 70
+name Szerverek
 exit
 
 #Portok
@@ -226,6 +278,9 @@ int fa0/15
 switchport mode access
 switchport access vlan 60
 exit
+int range fa0/16-17
+switchport mode access
+switchport access vlan 70
 
 
 #SW3
@@ -286,16 +341,17 @@ vlan 2
 name Management1
 
 #Etherchannel
-int range fa0/21-24
-
+int range fa0/22-24
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
+channel-group 2 mode active
+
 int range fa0/19-21
-
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
+channel-group 1 mode active
 
 
 
@@ -313,23 +369,27 @@ vtp password cisco
 int range fa0/1-14
 switchport mode access
 switchport access vlan 20
+int g0/1
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk native vlan 99
+int g0/2
+switchport mode access
+switchport access vlan 10
 exit
 
 #Etherchannel
 int range fa0/22-24
-
-
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
+channel-group 3 mode active
+
 int range fa0/19-21
-
-
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
-
-
+channel-group 1 mode active
 
 
 
@@ -344,7 +404,7 @@ vtp domain cisco
 vtp password cisco
 
 #Portok
-int range g0/1
+int g0/1
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
@@ -360,15 +420,16 @@ exit
 
 #Etherchannel
 int range fa0/22-24
-
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
+channel-group 3 mode active
+
 int range fa0/19-21
-
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,2,3,99
 switchport trunk native vlan 99
+channel-group 2 mode active
 
 
 
