--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -98,6 +98,39 @@ ip add 192.168.1.242 255.255.255.252
 no sh
 exit
 
+#HSRP
+int g0/1
+no sh
+int g0/1.10
+encapsulation dot1q 10
+ip add 192.168.1.2 255.255.255.224
+standby version 2
+standby 10 ip 192.168.1.1
+int g0/1.20
+encapsulation dot1q 20
+ip add 192.168.1.34 255.255.255.240
+standby version 2
+standby 20 ip 192.168.1.33
+int g0/1.30
+encapsulation dot1q 30
+ip add 192.168.1.66 255.255.255.248
+standby version 2
+standby 30 ip 192.168.1.65
+int g0/1.40
+encapsulation dot1q 40
+ip add 192.168.1.50 255.255.255.240
+standby version 2
+standby 40 ip 192.168.1.49
+int g0/1.2
+encapsulation dot1q 2
+ip add 192.168.1.82 255.255.255.224
+standby version 2
+standby 2 ip 192.168.1.81
+int g0/1.3
+encapsulation dot1q 3
+ip add 192.168.1.74 255.255.255.248
+standby version 2
+standby 3 ip 192.168.1.73
 
 #SITE1x2
 ena
@@ -113,6 +146,39 @@ ip add 192.168.1.250 255.255.255.252
 no sh
 exit
 
+#HSRP
+int g0/1
+no sh
+int g0/1.10
+encapsulation dot1q 10
+ip add 192.168.1.3 255.255.255.224
+standby version 2
+standby 10 ip 192.168.1.1
+int g0/1.20
+encapsulation dot1q 20
+ip add 192.168.1.35 255.255.255.240
+standby version 2
+standby 20 ip 192.168.1.33
+int g0/1.30
+encapsulation dot1q 30
+ip add 192.168.1.67 255.255.255.248
+standby version 2
+standby 30 ip 192.168.1.65
+int g0/1.40
+encapsulation dot1q 40
+ip add 192.168.1.51 255.255.255.240
+standby version 2
+standby 40 ip 192.168.1.49
+int g0/1.2
+encapsulation dot1q 2
+ip add 192.168.1.83 255.255.255.224
+standby version 2
+standby 2 ip 192.168.1.81
+int g0/1.3
+encapsulation dot1q 3
+ip add 192.168.1.75 255.255.255.248
+standby version 2
+standby 3 ip 192.168.1.73
 
 #SITE2x0
 ena
