--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -21,6 +21,20 @@ ip add 221.234.147.241 255.255.255.252
 no sh
 exit
 
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 200.200.200.0 0.0.0.3 area 0
+network 200.200.200.4 0.0.0.3 area 0
+network 221.234.147.240 0.0.0.3 area 0
+network 20.0.0.0 0.0.0.15 area 0
+auto-cost reference-bandwidth 1000
+passive-interface Se0/3/0
+passive-interface g0/0
+exit
+
+
+
+
 
 #ISP2
 ena
@@ -42,6 +56,21 @@ ip add 111.111.111.1 255.255.255.252
 no sh
 exit
 
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 200.200.200.0 0.0.0.3 area 0
+network 200.200.200.8 0.0.0.3 area 0
+network 111.111.111.0 0.0.0.3 area 0
+network 30.0.0.0 0.0.0.15 area 0
+auto-cost reference-bandwidth 1000
+passive-interface Se0/3/0
+passive-interface g0/0
+exit
+
+
+
+
+
 
 #ISP3
 ena
@@ -60,6 +89,14 @@ ip add 40.0.0.0 255.255.255.240
 no sh
 exit
 
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 200.200.200.4 0.0.0.3 area 0
+network 200.200.200.8 0.0.0.3 area 0
+network 40.0.0.0 0.0.0.15 area 0
+auto-cost reference-bandwidth 1000
+passive-interface Se0/3/0
+exit
 
 
 
@@ -81,6 +118,19 @@ int g0/1
 ip add 192.168.1.249 255.255.255.252
 no sh
 exit
+
+
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 192.168.1.240 0.0.0.3 area 0
+network 192.168.1.248 0.0.0.3 area 0
+default-information originate
+auto-cost reference-bandwidth 1000
+exit
+ip route 0.0.0.0 0.0.0.0 40.0.0.1
+
+
+
 
 
 
@@ -123,7 +173,7 @@ standby version 2
 standby 40 ip 192.168.1.49
 int g0/1.2
 encapsulation dot1q 2
-ip add 192.168.1.82 255.255.255.224
+ip add 192.168.1.82 255.255.255.248
 standby version 2
 standby 2 ip 192.168.1.81
 int g0/1.3
@@ -131,6 +181,28 @@ encapsulation dot1q 3
 ip add 192.168.1.74 255.255.255.248
 standby version 2
 standby 3 ip 192.168.1.73
+
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 192.168.1.240 0.0.0.3 area 0
+network 192.168.1.244 0.0.0.3 area 0
+network 192.168.1.0 0.0.0.31 area 0
+network 192.168.1.32 0.0.0.15 area 0
+network 192.168.1.48 0.0.0.15 area 0
+network 192.168.1.64 0.0.0.7 area 0
+network 192.168.1.72 0.0.0.7 area 0
+network 192.168.1.80 0.0.0.7 area 0
+passive-interface gig0/1.10
+passive-interface gig0/1.20
+passive-interface gig0/1.30
+passive-interface gig0/1.40
+passive-interface gig0/1.2
+passive-interface gig0/1.3
+auto-cost reference-bandwidth 1000
+exit
+
+
+
 
 #SITE1x2
 ena
@@ -171,7 +243,7 @@ standby version 2
 standby 40 ip 192.168.1.49
 int g0/1.2
 encapsulation dot1q 2
-ip add 192.168.1.83 255.255.255.224
+ip add 192.168.1.83 255.255.255.248
 standby version 2
 standby 2 ip 192.168.1.81
 int g0/1.3
@@ -179,6 +251,31 @@ encapsulation dot1q 3
 ip add 192.168.1.75 255.255.255.248
 standby version 2
 standby 3 ip 192.168.1.73
+
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 192.168.1.244 0.0.0.3 area 0
+network 192.168.1.248 0.0.0.3 area 0
+network 192.168.1.0 0.0.0.31 area 0
+network 192.168.1.32 0.0.0.15 area 0
+network 192.168.1.48 0.0.0.15 area 0
+network 192.168.1.64 0.0.0.7 area 0
+network 192.168.1.72 0.0.0.7 area 0
+network 192.168.1.80 0.0.0.7 area 0
+passive-interface gig0/1.10
+passive-interface gig0/1.20
+passive-interface gig0/1.30
+passive-interface gig0/1.40
+passive-interface gig0/1.2
+passive-interface gig0/1.3
+auto-cost reference-bandwidth 1000
+exit
+
+
+
+
+
+
 
 #SITE2x0
 ena
@@ -198,12 +295,22 @@ ip add 192.168.2.245 255.255.255.252
 no sh
 
 
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 192.168.2.240 0.0.0.3 area 0
+network 192.168.2.244 0.0.0.3 area 0
+default-information originate
+auto-cost reference-bandwidth 1000
+exit
+ip route 0.0.0.0 0.0.0.0 20.0.0.1
+
+
+
 
 #SITE2x1
 ena
 conf t
 hostname SITE2x1
-do wr
 
 #Portok
 int g0/0
@@ -227,19 +334,31 @@ ip add 192.168.2.18 255.255.255.248
 standby version 2
 standby 60 ip 192.168.2.17
 int g0/1.70
+encapsulation dot1q 70
 ip add 192.168.2.26 255.255.255.248
 standby version 2
 standby 70 ip 192.168.2.25
 no sh
 exit
 
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 192.168.2.0 0.0.0.15 area 0
+network 192.168.2.16 0.0.0.7 area 0
+network 192.168.2.24 0.0.0.7 area 0
+network 192.168.2.240 0.0.0.3 area 0
+network 192.168.2.248 0.0.0.3 area 0
+passive-interface gig0/1.50
+passive-interface gig0/1.60
+passive-interface gig0/1.70
+auto-cost reference-bandwidth 1000
+exit
 
 
 #SITE2x2
 ena
 conf t
 hostname SITE2x2
-do wr
 
 #Portok
 int g0/0
@@ -269,6 +388,7 @@ standby 60 ip 192.168.2.17
 standby 60 priority 110
 standby 60 preempt
 int g0/2.70
+encapsulation dot1q 70
 ip add 192.168.2.27 255.255.255.248
 standby version 2
 standby 70 ip 192.168.2.25
@@ -278,12 +398,27 @@ no sh
 exit
 
 
+#FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 192.168.2.0 0.0.0.15 area 0
+network 192.168.2.16 0.0.0.7 area 0
+network 192.168.2.24 0.0.0.7 area 0
+network 192.168.2.244 0.0.0.3 area 0
+network 192.168.2.248 0.0.0.3 area 0
+passive-interface gig0/2.50
+passive-interface gig0/2.60
+passive-interface gig0/2.70
+auto-cost reference-bandwidth 1000
+exit
+
+
+
+
 
 #SITE3
 ena
 conf t
 hostname SITE3
-do wr
 
 #Portok
 int Se0/3/0
@@ -311,6 +446,13 @@ net 192.168.3.32 255.255.255.248
 default-router 192.168.3.33
 dns-server 8.8.8.8
 exit
+
+
+#FORGALOMIRÁNYÍTÁS
+ip route 0.0.0.0 0.0.0.0 30.0.0.1
+
+
+
 
 #----------Switchek-------------
 
