NAT kész konfig

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -125,14 +125,17 @@ hostname SITE1x0
 int Se0/3/0
 ip add 40.0.0.2 255.255.255.240
 ip ospf message-digest-key 1 md5 cisco
+ip nat outside
 no sh
 int g0/0
 ip add 192.168.1.241 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
+ip nat inside
 no sh
 int g0/1
 ip add 192.168.1.249 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
+ip nat inside
 no sh
 exit
 
@@ -147,7 +150,15 @@ area 0 authentication message-digest
 exit
 ip route 0.0.0.0 0.0.0.0 40.0.0.1
 
-
+#NAT
+ip nat pool SITE1NAT 40.0.0.3 40.0.0.14 netmask 255.255.255.240
+ip nat inside source list 1 pool SITE1NAT overload
+access-list 1 permit 192.168.1.0 0.0.0.31
+access-list 1 permit 192.168.1.32 0.0.0.15
+access-list 1 permit 192.168.1.48 0.0.0.15
+access-list 1 permit 192.168.1.64 0.0.0.7
+access-list 1 permit 192.168.1.72 0.0.0.7
+access-list 1 permit 192.168.1.80 0.0.0.7
 
 
 
@@ -313,14 +324,17 @@ do wr
 int Se0/3/0
 ip add 20.0.0.2 255.255.255.240
 ip ospf message-digest-key 1 md5 cisco
+ip nat outside
 no sh
 int g0/0
 ip add 192.168.2.241 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
+ip nat inside
 no sh
 int g0/1
 ip add 192.168.2.245 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
+ip nat inside
 no sh
 
 
@@ -333,6 +347,18 @@ auto-cost reference-bandwidth 1000
 area 0 authentication message-digest
 exit
 ip route 0.0.0.0 0.0.0.0 20.0.0.1
+
+#NAT
+ip nat pool SITE2NAT 20.0.0.3 20.0.0.14 netmask 255.255.255.240
+ip nat inside source list 2 pool SITE2NAT overload
+access-list 2 permit 192.168.2.0 0.0.0.15
+access-list 2 permit 192.168.2.16 0.0.0.7
+access-list 2 permit 192.168.2.24 0.0.0.7
+
+
+
+
+
 
 
 
@@ -461,15 +487,18 @@ hostname SITE3
 #Portok
 int Se0/3/0
 ip add 30.0.0.2 255.255.255.240
+ip nat outside
 no sh
 int g0/0
 ip add 192.168.3.1 255.255.255.224
+ip nat inside
 no sh
 int g0/1
 no sh
 int g0/1.70
 encapsulation dot1q 70
 ip add 192.168.3.33 255.255.255.248
+ip nat inside
 no sh
 exit
 
@@ -488,6 +517,12 @@ exit
 
 #FORGALOMIRÁNYÍTÁS
 ip route 0.0.0.0 0.0.0.0 30.0.0.1
+
+#NAT
+ip nat pool SITE3NAT 30.0.0.3 30.0.0.14 netmask 255.255.255.240
+ip nat inside source list 1 pool SITE3NAT overload
+access-list 1 permit 192.168.3.0 0.0.0.31
+access-list 1 permit 192.168.3.32 0.0.0.7
 
 
 
