stp start, tervezési dokumentáció struktúra elkezd

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -493,6 +493,14 @@ switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 1 mode active
 
+#STP
+spanning-tree mode rapid-pvst
+spanning-tree vlan 10,20,30,40,3,4,5,6,99 root primary
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
+
+int
+spanning-tree guard root
 
 
 #SW1x2
