WLC NEM MUKODIK

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -121,24 +121,14 @@ ena
 conf t
 hostname SITE1x0
 
-#FORGALOMIRÁNYÍTÁS
-ip route 0.0.0.0 0.0.0.0 40.0.0.1
-
-#NAT
-ip nat pool SITE1NAT 40.0.0.3 40.0.0.14 netmask 255.255.255.240
-ip nat inside source list 1 pool SITE1NAT overload
-access-list 1 permit 192.168.1.0 0.0.0.31
-access-list 1 permit 192.168.1.32 0.0.0.15
-access-list 1 permit 192.168.1.48 0.0.0.15
-access-list 1 permit 192.168.1.64 0.0.0.7
-access-list 1 permit 192.168.1.72 0.0.0.7
-access-list 1 permit 192.168.1.80 0.0.0.7
-access-list 1 permit 
-access-list 1 permit
-access-list 1 permit
-
 #Portok
-int g0/0 
+int Se0/3/0
+ip add 40.0.0.2 255.255.255.240
+ip nat outside
+no sh
+exit
+int g0/0
+ip nat inside
 no sh
 int g0/0.10
 encapsulation dot1q 10
@@ -157,13 +147,42 @@ encapsulation dot1q 3
 ip add 192.168.1.74 255.255.255.248
 int g0/0.4
 encapsulation dot1q 4
-ip add 
+ip add 192.168.1.81 255.255.255.248
 int g0/0.5
 encapsulation dot1q 5
-ip add 
+ip add 192.168.1.81 255.255.255.248
 int g0/0.6
 encapsulation dot1q 6
-ip add 
+ip add 192.168.1.89 255.255.255.248
+exit
+
+
+#FORGALOMIRÁNYÍTÁS
+ip route 0.0.0.0 0.0.0.0 40.0.0.1
+
+#NAT
+ip nat pool SITE1NAT 40.0.0.3 40.0.0.14 netmask 255.255.255.240
+ip nat inside source list 1 pool SITE1NAT overload
+access-list 1 permit 192.168.1.0 0.0.0.31
+access-list 1 permit 192.168.1.32 0.0.0.15
+access-list 1 permit 192.168.1.48 0.0.0.15
+access-list 1 permit 192.168.1.64 0.0.0.7
+access-list 1 permit 192.168.1.72 0.0.0.7
+access-list 1 permit 192.168.1.80 0.0.0.7
+access-list 1 permit 192.168.1.88 0.0.0.7
+access-list 1 permit 192.168.1.96 0.0.0.7
+
+#DHCP
+ip dhcp pool Nyomtatok
+net 192.168.1.88 255.255.255.0
+default-router 192.168.1.89
+dns-server 8.8.8.8
+
+
+#WLC
+admin
+jelszo: Aa123456!
+
 
 
 #SITE2x0
@@ -205,9 +224,6 @@ ip nat inside source list 2 pool SITE2NAT overload
 access-list 2 permit 192.168.2.0 0.0.0.15
 access-list 2 permit 192.168.2.16 0.0.0.7
 access-list 2 permit 192.168.2.24 0.0.0.7
-
-
-
 
 
 
