WLC próbálkozás, gatya

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -173,10 +173,37 @@ access-list 1 permit 192.168.1.88 0.0.0.7
 access-list 1 permit 192.168.1.96 0.0.0.7
 
 #DHCP
+ip dhcp pool Programozok
+net 192.168.1.0 255.255.255.224
+default-router 192.168.1.1
+dns-server 8.8.8.8
+exit
+ip dhcp pool Designer
+net 192.168.1.32 255.255.255.240
+default-router 192.168.1.33
+dns-server 8.8.8.8
+exit
+ip dhcp pool hangtechnika
+net 192.168.1.64 255.255.255.248
+default-router 192.168.1.65
+dns-server 8.8.8.8
+exit
+ip dhcp pool Rendszergazda
+net 192.168.1.48 255.255.255.240
+default-router 192.168.1.49
+dns-server 8.8.8.8
+exit
+ip dhcp pool Szerverszoba
+net 192.168.1.72 255.255.255.248
+default-router 192.168.1.73
+dns-server 8.8.8.8
+exit
+#RECEPCIÓ MÉG NINCSEN
 ip dhcp pool Nyomtatok
-net 192.168.1.88 255.255.255.0
+net 192.168.1.88 255.255.255.248
 default-router 192.168.1.89
 dns-server 8.8.8.8
+exit
 
 
 #WLC
@@ -469,8 +496,9 @@ switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 Int g0/2
-switchport mode access
-switchport access vlan 30
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
+switchport trunk native vlan 99
 int fa0/1
 switchport mode access
 switchport access vlan 6
@@ -531,12 +559,14 @@ vtp password cisco
 
 #Portok
 int g0/1
-switchport mode access
-switchport access vlan 10
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
+switchport trunk native vlan 99
 exit
 int g0/2
-switchport mode access
-switchport access vlan 20
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
+switchport trunk native vlan 99
 exit
 int fa0/1
 switchport mode access
@@ -576,14 +606,11 @@ vtp password cisco
 
 #Portok
 int g0/1
-switchport mode access
-switchport access vlan 40
-int fa0/1
-switchport mode access
-switchport access vlan 40
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
+switchport trunk native vlan 99
 int fa0/2
 switchport mode access
-switchport access vlan 6
 int fa0/3
 switchport mode access
 switchport access vlan 3
@@ -595,11 +622,8 @@ switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 3 mode active
-
 int range fa0/19-21
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 2 mode active
-
-
