--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -543,9 +543,14 @@ spanning-tree vlan 10,20,30,40,3,4,5,6,99 root primary
 spanning-tree portfast default
 spanning-tree portfast bpduguard default
 
-int
+int fa0/1
 spanning-tree guard root
-
+int range g0/1-2
+spanning-tree guard root
+int po1
+spanning-tree guard root
+int po2
+spanning-tree guard root
 
 #SW1x2
 ena
